Fixed image names and decreased banner flicker

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,7 @@
 	--green: #c1d72f;
 	--light_green: #D3E36D;
 	--lighter_green: #dde898;
+	--banner: #1d1529;
 } 
 
 
@@ -2524,7 +2525,7 @@ input, select, textarea {
 
 	#banner {
 		background-attachment: scroll, scroll, scroll, fixed;
-		background-color: var(--light_green);
+		background-color: var(--banner);
 		background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/banner-test.jpg");
 		background-position: bottom left, bottom right, top left, top center;
 		background-repeat: no-repeat, no-repeat, repeat, no-repeat;
